# compi2-1s-2023

clase-27-enero/: pseudocodigo-tabla-de-simbolos.java
ejemplo-ast/calculadora/: CMakeLists.txt  ast.cpp  ast.h  expresion.cpp  expresion.h  lex.yy.c  lexer.l  mainwindow.cpp  mainwindow.ui  parser.cpp  parser.hpp  parser.y  parserctx.cpp  parserctx.hpp  sentencia.cpp  sentencia.h
